# pybind11_template

./: CMakeLists.txt  README.md  main.cpp  timing.ipynb
